fix: gap

--- a/scss/pages/amo.scss
+++ b/scss/pages/amo.scss
@@ -383,13 +383,14 @@ main {
             }
         }
     }
+   
 
     #main-amo {
         width: 100%;
         display: flex;
         flex-direction: column;
-        row-gap: 50px;
-        margin: 50px 0;
+        row-gap: 80px;
+        margin: 80px 0;
         .video-conta {
             height: 590px;
             border-radius: 32px;
@@ -546,7 +547,7 @@ main {
     }
 
     #slider {
-        margin: 40px 0px;
+        margin: 70px 0px;
         width: 100%;
 
         .slider-box {
